# WeatherEyes-1

./: db.sqlite3  manage.py  pyproject.toml
WeatherEyes/: asgi.py  settings.py  urls.py  wsgi.py
main/: WebpageMongo.py  forms.py  homepage.py  models.py  preferences.py  tests.py  urls.py  views.py
main/templates/main/: base.html  current_forecast.html  currentinquiry.html  future_forecast.html  home.html  observation.html  observational_inquiry.html  preferences.html  prior_forecast.html  thankyou.html
register/: forms.py  storeregistration.py  tests.py  views.py
register/templates/register/: register.html
